<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Caffeinate</string>
    <string name="app_icon">App. Icon</string>
    <string name="permissions_card_title">Permissions</string>
    <string name="battery_optimization_not_granted">Battery Optimization: Not Granted!</string>
    <string name="battery_optimization_granted">Battery Optimization: Granted!</string>
    <string name="battery_optimization_needed_title">Battery optimization needed</string>
    <string name="battery_optimization_needed_message">This App. requires the Battery Optimization permission to work properly.</string>
    <string name="background_optimization_not_granted">Background Optimization: Not Granted!</string>
    <string name="background_optimization_granted">Background Optimization: Granted!</string>
    <string name="notifications_permission_not_granted">Notifications Permission: Not Granted!</string>
    <string name="notifications_permission_granted">Notifications Permission: Granted!</string>
    <string name="notifications_permission_required">Notifications Permission Required</string>
    <string name="overlay_permission_not_granted">Draw on Other Apps Permission: Not Granted!</string>
    <string name="overlay_permission_granted">Draw on Other Apps Permission: Granted!</string>
    <string name="overlay_permission_required">Draw on Other Apps Permission Required</string>
    <string name="settings_card_title">Settings</string>
    <string name="app_theme_pref">Theme</string>
    <string name="app_theme_system_default">System Default</string>
    <string name="app_theme_system_light">Light</string>
    <string name="app_theme_system_dark">Dark</string>
    <string name="contrast">Contrast</string>
    <string name="app_contrast_standard">Standard</string>
    <string name="app_contrast_medium">Medium</string>
    <string name="app_contrast_high">High</string>
    <string name="material_you_pref">Material You</string>
    <string name="material_you_pref_not_available">Material You theming is only available on Android 12 and up</string>
    <string name="material_you_pref_description">Match the App.\'s colors to your wallpaper\'s colors.</string>
    <string name="material_you_pref_off">Material You Off</string>
    <string name="material_you_pref_on">Material You On</string>
    <string name="quick_tile_title_pref">Show Application Status in Quick Tile Title</string>
    <string name="quick_tile_title_pref_description">Some OEMs don\'t show the quick tile subtitles (which host the application status by default). Enable this option if you want to show the application status in the quick tile title.</string>
    <string name="quick_tile_title_pref_off">Show Status in Quick Tile Title On</string>
    <string name="quick_tile_title_pref_on">Show Status in Quick Tile Title Off</string>
    <string name="show_overlay_pref">Enable Overlay</string>
    <string name="show_overlay_pref_description">Show an Overlay of the remaining time on top of the screen, this overlay will stay on top even when the App. is in the background.
Some devices may require this option enabled in order for the App. to work properly.</string>
    <string name="show_overlay_pref_off">Show Overlay Off</string>
    <string name="show_overlay_pref_on">Show Overlay On</string>
    <string name="picture_in_picture_pref">Enable Picture in Picture</string>
    <string name="picture_in_picture_pref_description">Enable Picture in Picture to keep the App. running in the background</string>
    <string name="picture_in_picture_pref_off">Picture in Picture Off</string>
    <string name="picture_in_picture_pref_on">Picture in Picture On</string>
    <string name="allow_dimming_pref">Allow Dimming</string>
    <string name="allow_dimming_pref_description">Allow screen to dim when App. is on.</string>
    <string name="allow_dimming_pref_on">Allow Dimming Enabled</string>
    <string name="allow_dimming_pref_off">Allow Dimming Disabled</string>
    <string name="allow_while_locked_pref">Allow While Locked</string>
    <string name="allow_while_locked_pref_description">Allow App. to keep running while the screen is locked</string>
    <string name="allow_while_locked_pref_off">Allow While Locked Disabled</string>
    <string name="allow_while_locked_pref_on">Allow While Locked Enabled</string>
    <string name="timeouts_pref">Timeouts</string>
    <string name="timeouts_pref_change">Change</string>
    <string name="caffeinate_button_off">OFF</string>
    <string name="quick_tile_off">Off</string>
    <string name="action_next_timeout">Next Timeout</string>
    <string name="action_restart_timeout">Restart Timeout</string>
    <string name="action_start_timeout">Start Timeout</string>
    <string name="action_stop_timeout">Stop Timeout</string>
    <string name="action_disable_dimming">Disable Dimming</string>
    <string name="action_enable_dimming">Enable Dimming</string>
    <string name="notification_title_indefinite_duration">App. will keep the display on</string>
    <string name="notification_title_definite_duration">App. will keep the display on for %1$s</string>
    <string name="stop_notification_action_title">Tap to turn off</string>
    <string name="time_format_hour_letter">h</string>
    <string name="time_format_minute_letter">m</string>
    <string name="time_format_second_letter">s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="about">About</string>
    <string name="about_version_code">Version Code: %s</string>
    <string name="about_version_name">Version Name: %s</string>
    <string name="select_all_timeouts">Select All</string>
    <string name="deselect_all_timeouts">Deselect All</string>
    <string name="add_timeout">Add Timeout</string>
    <string name="add_infinite_timeout">Add Indefinite Timeout</string>
    <string name="timeout_already_exists">Timeout %s Already Exists</string>
    <plurals name="remove_timeout">
        <item quantity="zero">Remove %d Timeouts</item>
        <item quantity="one">Remove %d Timeout</item>
        <item quantity="two">Remove %d Timeouts</item>
        <item quantity="few">Remove %d Timeouts</item>
        <item quantity="many">Remove %d Timeouts</item>
        <item quantity="other">Remove %d Timeouts</item>
    </plurals>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_content">
        <![CDATA[
            <!DOCTYPE html>
            <html lang="en">
                <head>
                    <title>Caffeinate Privacy Notice</title>
                    <style>
                        h1 {
                            margin-top: 20px;
                        }
                        h2 {
                            margin-top: 15px;
                        }
                        h3 {
                            margin-top: 10px;
                        }
                        p {
                            margin-bottom: 5px;
                        }
                    </style>
                </head>

                <body>
                    <h1>Introduction</h1>
                    <p>
                        Welcome to Caffeinate! This privacy notice outlines how we collect, use, and protect your
                        personal information when you use our mobile application. By using Caffeinate, you agree to
                        the terms described in this notice.
                    </p>

                    <h1>Data Collection</h1>
                    <p>
                        Notification Access: Caffeinate requests notification access to provide you with personalized
                        updates of the remaining time. We do not store any notification content or personally
                        identifiable information (PII) outside of your device.
                    </p>

                    <h1>Information Usage</h1>
                    <h2>Personal Data</h2>
                    <p>
                        We do not collect or store any personal data such as names, email addresses,
                        or phone numbers.
                    </p>

                    <h1>Usage Analytics</h1>
                    <p>Caffeinate does not track your usage behavior or collect analytics data.</p>

                    <h1>Data Security</h1>
                    <h2>On-Device Storage</h2>
                    <p>
                        All data used by Caffeinate remains on your device. Caffeinate does not transmit or
                        store any data externally.
                    </p>

                    <h1>Third-Party Services</h1>
                    <h2>Advertisements</h2>
                    <p>Caffeinate does not display third-party ads.</p>

                    <h2>External Links</h2>
                    <p>
                        Caffeinate may contain links to external websites. Please note that we are not
                        responsible for the privacy practices of these sites.
                    </p>

                    <h1>Children’s Privacy</h1>
                    <p>
                        Caffeinate is not intended for children under the age of 13. We do not knowingly collect any
                        information from children.
                    </p>

                    <h1>Changes to this notice</h1>
                    <p>
                        Caffeinate may update this privacy notice from time to time. Any changes will be reflected in
                        the app and on our website.
                    </p>

                    <h1>Contact Us</h1>
                    <p>
                        If you have any questions or concerns about this privacy notice, please contact me at
                        <a href="mailto:abdalmoniemalhifnawy@gmail.com">abdalmoniemalhifnawy@gmail.com</a>.
                    </p>

                    <h1>Android Permissions</h1>
                    <h2>WAKE_LOCK</h2>
                    <p>
                        This permission allows an application to hold a wake lock to keep the device from sleeping.
                    </p>

                    <h2>FOREGROUND_SERVICE</h2>
                    <p>
                        This permission allows an application to run in the background as a foreground service.
                    </p>

                    <h2>POST_NOTIFICATIONS</h2>
                    <p>
                        This permission allows the app to notify the user when a timeout is started. It is
                        optional and up to the user whether they want to be notified or not.
                    </p>

                    <h2>REQUEST_IGNORE_BATTERY_OPTIMIZATIONS</h2>
                    <p>
                        This permission allows an application to request that the system ignore battery
                        optimizations.
                    </p>

                    <h2>SYSTEM_ALERT_WINDOW</h2>
                    <p>
                        This permission allows an application to display an overlay on top of other apps.
                    </p>
                </body>
            </html>
        ]]>
    </string>

    <!-- Untranslated strings -->
    <string name="github_link" translatable="false">https://github.com/abdalmoniem/Caffeinate</string>
    <string name="crowdin_link" translatable="false">https://crowdin.com/project/caffeinate</string>
    <string name="f_droid_link" translatable="false">https://f-droid.org/packages/com.hifnawy.caffeinate</string>
    <string name="izzy_on_droid_link" translatable="false">https://apt.izzysoft.de/fdroid/index/apk/com.hifnawy.caffeinate</string>
</resources>